# dynamic-dora-builder

./: .gitignore  README.md  dataflow.yml  pyproject.toml
samples/dataflow/: conversation.yml  listener.j2  plot.yml  talker.j2  webcam.yml  webcam_plot.yml
src/dynamic_dora_builder/: __init__.py  builder.py  cli.py  models.py  yaml_utils.py
